samples/_failures_safe/1761454304_b17344_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_190e22bc.c: In function ‘main’:
./samples/SAFE/__tmp_190e22bc.c:158:17: error: expected declaration or statement at end of input
  158 |                 printf("Invalid input\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_190e22bc.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_190e22bc.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_190e22bc.c:158:17: error: expected declaration or statement at end of input
